Migrate to using ManagerCollection

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -540,6 +540,9 @@
          <layout class="QHBoxLayout" name="horizontalLayout_4">
           <item>
            <widget class="QPushButton" name="PB_StartProgram">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="font">
              <font>
               <pointsize>14</pointsize>
