--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -477,7 +477,7 @@
                </size>
               </property>
               <property name="text">
-               <string>Keyboard Settings</string>
+               <string>Keyboard Controls</string>
               </property>
              </widget>
             </item>
