Added program description

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -489,7 +489,7 @@
               <item>
                <widget class="QLabel" name="label_12">
                 <property name="sizePolicy">
-                 <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                 <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                   <horstretch>0</horstretch>
                   <verstretch>0</verstretch>
                  </sizepolicy>
@@ -500,20 +500,7 @@
                  </font>
                 </property>
                 <property name="text">
-                 <string>Current Program:</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QLabel" name="L_ProgramCurrent">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-                <property name="text">
-                 <string>---</string>
+                 <string>Description:</string>
                 </property>
                </widget>
               </item>
@@ -522,7 +509,10 @@
             <item>
              <widget class="QLabel" name="L_ProgramDescription">
               <property name="text">
-               <string/>
+               <string>No program selected.</string>
+              </property>
+              <property name="wordWrap">
+               <bool>true</bool>
               </property>
              </widget>
             </item>
