--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -612,6 +612,9 @@
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_4">
+            <property name="spacing">
+             <number>16</number>
+            </property>
             <item>
              <spacer name="verticalSpacer">
               <property name="orientation">
