--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -653,6 +653,9 @@
             </item>
             <item>
              <widget class="QPushButton" name="PB_ProfileSettings">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
               <property name="minimumSize">
                <size>
                 <width>110</width>
